--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Vision Journal</title>
+
+  <!-- Your styles -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Leaflet CSS & JS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+    integrity="sha256-sA+ePIb5gyXcHPKf/ZG1gasGZe7r3Flr5Qj8h+4k0tk="
+    crossorigin=""
+  />
+  <script
+    src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+    integrity="sha256-PlbM/Mz8Tg038rZBSZ8jraKKF4lsYkMXYiejHMclvhU="
+    crossorigin=""
+  ></script>
+
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
-  <!-- Chart.js placeholder -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <header class="card">
@@ -20,6 +34,7 @@
   <div class="layout">
     <!-- LEFT COLUMN -->
     <main id="main-content">
+      <!-- Login -->
       <div id="login-screen" class="card">
         <h2>Sign Up or Log In</h2>
         <input type="email" id="email" placeholder="you@example.com" />
@@ -29,15 +44,18 @@
         <p id="login-msg"></p>
       </div>
 
+      <!-- Journal + Insights -->
       <div id="journal-screen" class="hidden">
+        <!-- Insights (Map) -->
         <div id="insights-box" class="card">
           <h2>Insights</h2>
-          <canvas id="heatmapCanvas" width="300" height="150"></canvas>
-          <p style="text-align:center;font-size:0.9rem;color:#666;">
-            (Interactive globe-heatmap coming soon)
+          <div id="map"></div>
+          <p style="text-align:center;font-size:.9rem;color:#666;">
+            (Zoom & pan to explore hot spots)
           </p>
         </div>
 
+        <!-- New Entry -->
         <div id="new-entry-box" class="card">
           <h2>New Entry</h2>
           <select id="type">
@@ -63,6 +81,7 @@
           <p id="entry-msg"></p>
         </div>
 
+        <!-- My Journal -->
         <div id="journal-box" class="card">
           <h2>My Journal</h2>
           <ul id="entries"></ul>
@@ -83,7 +102,7 @@
   </div>
 
   <script>
-    // Firebase init
+    // ─── Firebase Setup ─────────────────────────────────────────────────────
     const firebaseConfig = {
       apiKey: "AIzaSyD3cdFU4K-LiPtkbVcQMmNp1701dvOEFW8",
       authDomain: "vision-journal-proto.firebaseapp.com",
@@ -96,11 +115,9 @@
     const auth = firebase.auth();
     const db   = firebase.firestore();
 
-    // UI refs
+    // ─── UI References ──────────────────────────────────────────────────────
     const loginScreen    = document.getElementById('login-screen');
     const journalScreen  = document.getElementById('journal-screen');
-    const entriesList    = document.getElementById('entries');
-    const feedEntries    = document.getElementById('feed-entries');
     const logoutBox      = document.getElementById('logout-box');
     const loginMsg       = document.getElementById('login-msg');
     const emailInput     = document.getElementById('email');
@@ -114,17 +131,26 @@
     const manualDiv      = document.getElementById('manual-location');
     const countryInput   = document.getElementById('country-input');
     const stateInput     = document.getElementById('state-input');
+    const entriesList    = document.getElementById('entries');
+    const feedEntries    = document.getElementById('feed-entries');
 
-    // Auth handlers
+    // ─── Leaflet Map Init ──────────────────────────────────────────────────
+    const map = L.map('map').setView([20, 0], 2);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    // ─── Auth Handlers ─────────────────────────────────────────────────────
     signupBtn.onclick = () =>
       auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
           .catch(e => loginMsg.textContent = e.message);
+
     loginBtn.onclick = () =>
       auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
           .catch(e => loginMsg.textContent = e.message);
+
     logoutBtn.onclick = () => auth.signOut();
 
-    // On auth change
     auth.onAuthStateChanged(user => {
       if (user) {
         loginScreen.classList.add('hidden');
@@ -136,21 +162,22 @@
         journalScreen.classList.add('hidden');
         logoutBox.classList.add('hidden');
       }
-      loadPublicFeed();
+      loadPublicFeed();     // update sidebar
+      plotPublicMarkers();  // update map
     });
 
-    // Geolocation via IP fallback to manual
+    // ─── Location Detection ─────────────────────────────────────────────────
     detectBtn.onclick = () => {
       locationDisp.textContent = 'Detecting…';
       fetch('https://ipapi.co/json/')
         .then(r => r.json())
         .then(data => {
           if (data.country_name && data.region) {
-            locationDisp.textContent = `${data.city || ''}, ${data.region}, ${data.country_name}`;
+            locationDisp.textContent = `${data.region}, ${data.country_name}`;
             countryInput.value = data.country_name;
             stateInput.value   = data.region;
             manualDiv.classList.add('hidden');
-          } else throw new Error('bad data');
+          } else throw new Error('Incomplete');
         })
         .catch(err => {
           console.error(err);
@@ -159,7 +186,7 @@
         });
     };
 
-    // Save entry with location
+    // ─── Save Entry (with country/state) ───────────────────────────────────
     saveBtn.onclick = () => {
       const type     = document.getElementById('type').value;
       const text     = document.getElementById('text').value;
@@ -172,6 +199,7 @@
         alert('Please detect or enter country and state.');
         return;
       }
+
       db.collection('visions').doc(auth.currentUser.uid)
         .collection('entries').add({
           userId: auth.currentUser.uid,
@@ -189,7 +217,7 @@
         });
     };
 
-    // Load personal journal
+    // ─── Load Personal Journal ──────────────────────────────────────────────
     function loadJournal() {
       entriesList.innerHTML = '';
       db.collection('visions').doc(auth.currentUser.uid)
@@ -204,29 +232,62 @@
         });
     }
 
-    // Load public feed (limit 10 if guest)
+    // ─── Load Sidebar Feed ─────────────────────────────────────────────────
     function loadPublicFeed() {
       feedEntries.innerHTML = '';
       let q = db.collectionGroup('entries')
                 .where('isPublic','==',true)
                 .orderBy('createdAt','desc');
       if (!auth.currentUser) q = q.limit(10);
-      q.get().then(snap => {
-        snap.forEach(doc => {
-          const d = doc.data();
-          // safely get location
-          const loc = d.location || {};
-          const locText = loc.country && loc.state
-                        ? ` (${loc.state}, ${loc.country})`
-                        : '';
-          const li = document.createElement('li');
-          li.textContent = `${d.type}: ${d.text}${locText}`;
-          feedEntries.append(li);
-        });
-        if (!feedEntries.children.length)
-          feedEntries.innerHTML = '<p>No public entries.</p>';
-      })
-      .catch(err => console.error('Public-feed error:', err));
+      q.get()
+       .then(snap => {
+         snap.forEach(doc => {
+           const d = doc.data();
+           const loc = d.location || {};
+           const locText = loc.state && loc.country
+                         ? ` (${loc.state}, ${loc.country})`
+                         : '';
+           const li = document.createElement('li');
+           li.textContent = `${d.type}: ${d.text}${locText}`;
+           feedEntries.append(li);
+         });
+         if (!feedEntries.children.length)
+           feedEntries.innerHTML = '<p>No public entries.</p>';
+       })
+       .catch(console.error);
+    }
+
+    // ─── Plot Public Markers on Map ─────────────────────────────────────────
+    function plotPublicMarkers() {
+      // Clear existing layers (except the tile layer)
+      map.eachLayer(layer => {
+        if (layer instanceof L.Marker) map.removeLayer(layer);
+      });
+
+      db.collectionGroup('entries')
+        .where('isPublic','==',true)
+        .get()
+        .then(snap => {
+          snap.forEach(doc => {
+            const d = doc.data();
+            if (!d.location?.state || !d.location?.country) return;
+            const q = encodeURIComponent(d.location.state + ', ' + d.location.country);
+            fetch(`https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`)
+              .then(r => r.json())
+              .then(results => {
+                if (!results.length) return;
+                const { lat, lon } = results[0];
+                L.marker([parseFloat(lat), parseFloat(lon)])
+                 .addTo(map)
+                 .bindPopup(
+                   `<strong>${d.type}</strong>: ${d.text}` +
+                   `<br><em>${d.location.state}, ${d.location.country}</em>`
+                 );
+              })
+              .catch(console.error);
+          });
+        })
+        .catch(console.error);
     }
   </script>
 </body>
