--- a/index.html
+++ b/index.html
@@ -133,53 +133,53 @@
     }
 
     // ─── Auth Handlers ─────────────────────────────────────────────────────
-    signupBtn.onclick = ()=>
-      auth.createUserWithEmailAndPassword(emailInput.value,passwordInput.value)
-        .catch(e=>loginMsg.textContent=e.message);
+    signupBtn.onclick = () =>
+      auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
+        .catch(e => loginMsg.textContent = e.message);
 
-    loginBtn.onclick = ()=>
-      auth.signInWithEmailAndPassword(emailInput.value,passwordInput.value)
-        .catch(e=>loginMsg.textContent=e.message);
+    loginBtn.onclick = () =>
+      auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
+        .catch(e => loginMsg.textContent = e.message);
 
-    logoutBtn.onclick = ()=>auth.signOut();
+    logoutBtn.onclick = () => auth.signOut();
 
-    auth.onAuthStateChanged(user=>{
-      if(user){
-        loginScreen .classList.add('hidden');
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        loginScreen.classList.add('hidden');
         journalScreen.classList.remove('hidden');
-        logoutBox   .classList.remove('hidden');
-        if(leafletReady) setTimeout(()=>map.invalidateSize(),200);
+        logoutBox.classList.remove('hidden');
+        if (leafletReady) setTimeout(() => map.invalidateSize(), 200);
         loadJournal();
       } else {
-        loginScreen .classList.remove('hidden');
+        loginScreen.classList.remove('hidden');
         journalScreen.classList.add('hidden');
-        logoutBox   .classList.add('hidden');
+        logoutBox.classList.add('hidden');
       }
       loadPublicFeed();
-      if(leafletReady) plotPublicMarkers();
+      if (leafletReady) plotPublicMarkers();
     });
 
     // ─── Location Detection ─────────────────────────────────────────────────
-    detectBtn.onclick = ()=>{
+    detectBtn.onclick = () => {
       locationDisp.textContent = 'Detecting…';
       fetch('https://ipapi.co/json/')
-        .then(r=>r.json())
-        .then(d=>{
-          if(d.country_name && d.region){
+        .then(r => r.json())
+        .then(d => {
+          if (d.country_name && d.region) {
             locationDisp.textContent = `${d.region}, ${d.country_name}`;
             countryInput.value = d.country_name;
-            stateInput  .value = d.region;
+            stateInput.value   = d.region;
             manualDiv.classList.add('hidden');
-          }else throw {};
+          } else throw {};
         })
-        .catch(_=>{
+        .catch(_ => {
           locationDisp.textContent = 'Auto-detect failed. Enter manually:';
           manualDiv.classList.remove('hidden');
         });
     };
 
     // ─── Save Entry w/ Geocode ──────────────────────────────────────────────
-    saveBtn.onclick = ()=>{
+    saveBtn.onclick = () => {
       const type     = document.getElementById('type').value;
       const text     = document.getElementById('text').value;
       const tags     = document.getElementById('tags').value
@@ -187,58 +187,51 @@
       const isPublic = document.getElementById('isPublic').checked;
       const country  = countryInput.value.trim();
       const state    = stateInput.value.trim();
-      if(!country||!state){ alert('Enter country & state'); return; }
+      if (!country || !state) {
+        alert('Enter country & state');
+        return;
+      }
 
-      // build doc data
       const doc = {
         userId: auth.currentUser.uid,
-        type,text,tags,isPublic,
-        location:{country,state},
-        isFulfilled:false,
+        type, text, tags, isPublic,
+        location: { country, state },
+        isFulfilled: false,
         createdAt: firebase.firestore.FieldValue.serverTimestamp()
       };
 
-      // if public, geocode then save with lat/lon
-      if(isPublic){
+      if (isPublic) {
         const q = encodeURIComponent(`${state}, ${country}`);
         fetch(`https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`)
-          .then(r=>r.json())
-          .then(res=>{
-            if(res.length){
+          .then(r => r.json())
+          .then(res => {
+            if (res.length) {
               doc.lat = parseFloat(res[0].lat);
               doc.lon = parseFloat(res[0].lon);
             }
           })
           .catch(()=>{})
-          .finally(()=>{
-            db.collection('visions')
-              .doc(auth.currentUser.uid)
-              .collection('entries')
-              .add(doc)
-              .then(()=>{ document.getElementById('entry-msg').textContent='Saved!'; loadJournal(); })
-              .catch(()=> document.getElementById('entry-msg').textContent='Save failed.');
+          .finally(() => {
+            db.collection('visions').doc(auth.currentUser.uid)
+              .collection('entries').add(doc)
+              .then(() => { document.getElementById('entry-msg').textContent = 'Saved!'; loadJournal(); })
+              .catch(() => document.getElementById('entry-msg').textContent = 'Save failed.');
           });
       } else {
-        // private entry, just save
-        db.collection('visions')
-          .doc(auth.currentUser.uid)
-          .collection('entries')
-          .add(doc)
-          .then(()=>{ document.getElementById('entry-msg').textContent='Saved!'; loadJournal(); })
-          .catch(()=> document.getElementById('entry-msg').textContent='Save failed.');
+        db.collection('visions').doc(auth.currentUser.uid)
+          .collection('entries').add(doc)
+          .then(() => { document.getElementById('entry-msg').textContent = 'Saved!'; loadJournal(); })
+          .catch(() => document.getElementById('entry-msg').textContent = 'Save failed.');
       }
     };
 
     // ─── Load Personal Journal ──────────────────────────────────────────────
-    function loadJournal(){
+    function loadJournal() {
       entriesList.innerHTML = '';
-      db.collection('visions')
-        .doc(auth.currentUser.uid)
-        .collection('entries')
-        .orderBy('createdAt','desc')
-        .get()
-        .then(snap=>{
-          snap.forEach(d=>{
+      db.collection('visions').doc(auth.currentUser.uid)
+        .collection('entries').orderBy('createdAt','desc').get()
+        .then(snap => {
+          snap.forEach(d => {
             const data = d.data();
             const li = document.createElement('li');
             li.textContent = `${data.type}: ${data.text}`;
@@ -248,44 +241,63 @@
     }
 
     // ─── Load Public Feed ───────────────────────────────────────────────────
-    function loadPublicFeed(){
+    function loadPublicFeed() {
       feedEntries.innerHTML = '';
       let q = db.collectionGroup('entries')
                 .where('isPublic','==',true)
                 .orderBy('createdAt','desc');
-      if(!auth.currentUser) q=q.limit(10);
-      q.get().then(snap=>{
-        snap.forEach(d=>{
+      if (!auth.currentUser) q = q.limit(10);
+      q.get().then(snap => {
+        snap.forEach(d => {
           const data = d.data();
-          const loc = data.location||{};
-          const locText = loc.state && loc.country
-                        ? ` (${loc.state}, ${loc.country})`
-                        : '';
+          const loc  = data.location||{};
+          const locText = loc.state&&loc.country ? ` (${loc.state}, ${loc.country})` : '';
           const li = document.createElement('li');
           li.textContent = `${data.type}: ${data.text}${locText}`;
           feedEntries.append(li);
         });
         if(!feedEntries.children.length)
-          feedEntries.innerHTML='<p>No public entries.</p>';
+          feedEntries.innerHTML = '<p>No public entries.</p>';
       });
     }
 
-    // ─── Plot Markers from Stored lat/lon ─────────────────────────────────
-    function plotPublicMarkers(){
-      if(!leafletReady) return;
-      map.eachLayer(l=>{ if(l instanceof L.Marker) map.removeLayer(l); });
+    // ─── Plot Public Markers (DEBUG VERSION) ────────────────────────────────
+    function plotPublicMarkers() {
+      if (!leafletReady) {
+        console.warn('Leaflet not ready, skipping markers');
+        return;
+      }
+
+      console.log('--- plotPublicMarkers() start ---');
+      map.eachLayer(layer => {
+        if (layer instanceof L.Marker) map.removeLayer(layer);
+      });
+
       db.collectionGroup('entries')
         .where('isPublic','==',true)
         .get()
-        .then(snap=>{
-          snap.forEach(d=>{
-            const data = d.data();
-            if(typeof data.lat==='number' && typeof data.lon==='number'){
-              L.marker([data.lat,data.lon])
+        .then(snap => {
+          console.log('Firestore returned', snap.size, 'public docs');
+          snap.forEach(doc => {
+            const d = doc.data();
+            console.log('Doc', doc.id, '→', d.lat, d.lon);
+
+            if (typeof d.lat === 'number' && typeof d.lon === 'number') {
+              console.log('  ➜ plotting marker at', d.lat, d.lon);
+              L.marker([d.lat, d.lon])
                 .addTo(map)
-                .bindPopup(`<strong>${data.type}</strong>: ${data.text}<br><em>${data.location.state}, ${data.location.country}</em>`);
+                .bindPopup(
+                  `<strong>${d.type}</strong>: ${d.text}<br>` +
+                  `<em>${d.location.state}, ${d.location.country}</em>`
+                );
+            } else {
+              console.warn('  ✖ no coords for', doc.id);
             }
           });
+          console.log('--- plotPublicMarkers() end ---');
+        })
+        .catch(err => {
+          console.error('Error fetching public entries:', err);
         });
     }
   </script>
