--- a/index.html
+++ b/index.html
@@ -134,52 +134,52 @@
 
     // ─── Auth Handlers ─────────────────────────────────────────────────────
     signupBtn.onclick = () =>
-      auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
-        .catch(e => loginMsg.textContent = e.message);
+      auth.createUserWithEmailAndPassword(emailInput.value,passwordInput.value)
+        .catch(e=>loginMsg.textContent=e.message);
 
     loginBtn.onclick = () =>
-      auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
-        .catch(e => loginMsg.textContent = e.message);
+      auth.signInWithEmailAndPassword(emailInput.value,passwordInput.value)
+        .catch(e=>loginMsg.textContent=e.message);
 
-    logoutBtn.onclick = () => auth.signOut();
+    logoutBtn.onclick = ()=>auth.signOut();
 
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        loginScreen.classList.add('hidden');
+    auth.onAuthStateChanged(user=>{
+      if(user){
+        loginScreen .classList.add('hidden');
         journalScreen.classList.remove('hidden');
-        logoutBox.classList.remove('hidden');
-        if (leafletReady) setTimeout(() => map.invalidateSize(), 200);
+        logoutBox   .classList.remove('hidden');
+        if(leafletReady) setTimeout(()=>map.invalidateSize(),200);
         loadJournal();
-      } else {
-        loginScreen.classList.remove('hidden');
+      }else{
+        loginScreen .classList.remove('hidden');
         journalScreen.classList.add('hidden');
-        logoutBox.classList.add('hidden');
+        logoutBox   .classList.add('hidden');
       }
       loadPublicFeed();
-      if (leafletReady) plotPublicMarkers();
+      if(leafletReady) plotPublicMarkers();
     });
 
     // ─── Location Detection ─────────────────────────────────────────────────
-    detectBtn.onclick = () => {
-      locationDisp.textContent = 'Detecting…';
+    detectBtn.onclick = ()=>{
+      locationDisp.textContent='Detecting…';
       fetch('https://ipapi.co/json/')
-        .then(r => r.json())
-        .then(d => {
-          if (d.country_name && d.region) {
-            locationDisp.textContent = `${d.region}, ${d.country_name}`;
-            countryInput.value = d.country_name;
-            stateInput.value   = d.region;
+        .then(r=>r.json())
+        .then(d=>{
+          if(d.country_name&&d.region){
+            locationDisp.textContent=`${d.region}, ${d.country_name}`;
+            countryInput.value=d.country_name;
+            stateInput.value=d.region;
             manualDiv.classList.add('hidden');
-          } else throw {};
+          }else throw{};
         })
-        .catch(_ => {
-          locationDisp.textContent = 'Auto-detect failed. Enter manually:';
+        .catch(_=>{
+          locationDisp.textContent='Auto‐detect failed. Enter manually:';
           manualDiv.classList.remove('hidden');
         });
     };
 
     // ─── Save Entry w/ Geocode ──────────────────────────────────────────────
-    saveBtn.onclick = () => {
+    saveBtn.onclick = ()=>{
       const type     = document.getElementById('type').value;
       const text     = document.getElementById('text').value;
       const tags     = document.getElementById('tags').value
@@ -187,118 +187,100 @@
       const isPublic = document.getElementById('isPublic').checked;
       const country  = countryInput.value.trim();
       const state    = stateInput.value.trim();
-      if (!country || !state) {
+      if(!country||!state){
         alert('Enter country & state');
         return;
       }
 
       const doc = {
         userId: auth.currentUser.uid,
-        type, text, tags, isPublic,
-        location: { country, state },
-        isFulfilled: false,
-        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        type,text,tags,isPublic,
+        location:{country,state},
+        isFulfilled:false,
+        createdAt:firebase.firestore.FieldValue.serverTimestamp()
       };
 
-      if (isPublic) {
-        const q = encodeURIComponent(`${state}, ${country}`);
+      if(isPublic){
+        const q=encodeURIComponent(`${state}, ${country}`);
         fetch(`https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`)
-          .then(r => r.json())
-          .then(res => {
-            if (res.length) {
-              doc.lat = parseFloat(res[0].lat);
-              doc.lon = parseFloat(res[0].lon);
+          .then(r=>r.json())
+          .then(res=>{
+            if(res.length){
+              doc.lat=parseFloat(res[0].lat);
+              doc.lon=parseFloat(res[0].lon);
             }
           })
           .catch(()=>{})
-          .finally(() => {
+          .finally(()=>{
             db.collection('visions').doc(auth.currentUser.uid)
               .collection('entries').add(doc)
-              .then(() => { document.getElementById('entry-msg').textContent = 'Saved!'; loadJournal(); })
-              .catch(() => document.getElementById('entry-msg').textContent = 'Save failed.');
+              .then(()=>{document.getElementById('entry-msg').textContent='Saved!'; loadJournal();})
+              .catch(()=>document.getElementById('entry-msg').textContent='Save failed.');
           });
-      } else {
+      }else{
         db.collection('visions').doc(auth.currentUser.uid)
           .collection('entries').add(doc)
-          .then(() => { document.getElementById('entry-msg').textContent = 'Saved!'; loadJournal(); })
-          .catch(() => document.getElementById('entry-msg').textContent = 'Save failed.');
+          .then(()=>{document.getElementById('entry-msg').textContent='Saved!'; loadJournal();})
+          .catch(()=>document.getElementById('entry-msg').textContent='Save failed.');
       }
     };
 
     // ─── Load Personal Journal ──────────────────────────────────────────────
-    function loadJournal() {
+    function loadJournal(){
       entriesList.innerHTML = '';
       db.collection('visions').doc(auth.currentUser.uid)
         .collection('entries').orderBy('createdAt','desc').get()
-        .then(snap => {
-          snap.forEach(d => {
-            const data = d.data();
-            const li = document.createElement('li');
-            li.textContent = `${data.type}: ${data.text}`;
+        .then(snap=>{
+          snap.forEach(d=>{
+            const data=d.data();
+            const li=document.createElement('li');
+            li.textContent=`${data.type}: ${data.text}`;
             entriesList.append(li);
           });
         });
     }
 
-    // ─── Load Public Feed ───────────────────────────────────────────────────
-    function loadPublicFeed() {
+    // ─── Load Public Feed (no orderBy) ─────────────────────────────────────
+    function loadPublicFeed(){
       feedEntries.innerHTML = '';
       let q = db.collectionGroup('entries')
-                .where('isPublic','==',true)
-                .orderBy('createdAt','desc');
-      if (!auth.currentUser) q = q.limit(10);
-      q.get().then(snap => {
-        snap.forEach(d => {
-          const data = d.data();
-          const loc  = data.location||{};
-          const locText = loc.state&&loc.country ? ` (${loc.state}, ${loc.country})` : '';
-          const li = document.createElement('li');
-          li.textContent = `${data.type}: ${data.text}${locText}`;
+                .where('isPublic','==',true);
+      if(!auth.currentUser) q=q.limit(10);
+      q.get().then(snap=>{
+        snap.forEach(d=>{
+          const data=d.data();
+          const loc=data.location||{};
+          const locText=loc.state&&loc.country?` (${loc.state}, ${loc.country})`:'';
+          const li=document.createElement('li');
+          li.textContent=`${data.type}: ${data.text}${locText}`;
           feedEntries.append(li);
         });
         if(!feedEntries.children.length)
-          feedEntries.innerHTML = '<p>No public entries.</p>';
+          feedEntries.innerHTML='<p>No public entries.</p>';
       });
     }
 
-    // ─── Plot Public Markers (DEBUG VERSION) ────────────────────────────────
-    function plotPublicMarkers() {
-      if (!leafletReady) {
-        console.warn('Leaflet not ready, skipping markers');
-        return;
-      }
-
-      console.log('--- plotPublicMarkers() start ---');
-      map.eachLayer(layer => {
-        if (layer instanceof L.Marker) map.removeLayer(layer);
-      });
-
+    // ─── Plot Public Markers (no orderBy) ─────────────────────────────────
+    function plotPublicMarkers(){
+      if(!leafletReady) return;
+      map.eachLayer(l=>{if(l instanceof L.Marker) map.removeLayer(l);});
       db.collectionGroup('entries')
         .where('isPublic','==',true)
         .get()
-        .then(snap => {
-          console.log('Firestore returned', snap.size, 'public docs');
-          snap.forEach(doc => {
-            const d = doc.data();
-            console.log('Doc', doc.id, '→', d.lat, d.lon);
-
-            if (typeof d.lat === 'number' && typeof d.lon === 'number') {
-              console.log('  ➜ plotting marker at', d.lat, d.lon);
-              L.marker([d.lat, d.lon])
+        .then(snap=>{
+          snap.forEach(d=>{
+            const data=d.data();
+            if(typeof data.lat==='number'&&typeof data.lon==='number'){
+              L.marker([data.lat,data.lon])
                 .addTo(map)
                 .bindPopup(
-                  `<strong>${d.type}</strong>: ${d.text}<br>` +
-                  `<em>${d.location.state}, ${d.location.country}</em>`
+                  `<strong>${data.type}</strong>: ${data.text}<br>`+
+                  `<em>${data.location.state}, ${data.location.country}</em>`
                 );
-            } else {
-              console.warn('  ✖ no coords for', doc.id);
             }
           });
-          console.log('--- plotPublicMarkers() end ---');
         })
-        .catch(err => {
-          console.error('Error fetching public entries:', err);
-        });
+        .catch(console.error);
     }
   </script>
 </body>
