--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
   <script>
     // ── Firebase Init ─────────────────────────
     const firebaseConfig = {
-      apiKey: "...",
-      authDomain: "vision-journal-proto.firebaseapp.com",
+      apiKey: "AIzaSyD3cdFU4K-LiPtkbVcQMmNp1701dvOEFW8",
+	  authDomain: "vision-journal-proto.firebaseapp.com",
       projectId: "vision-journal-proto",
-      storageBucket: "vision-journal-proto.appspot.com",
+      storageBucket: "vision-journal-proto.firebasestorage.app",
       messagingSenderId: "1063775796504",
       appId: "1:1063775796504:web:8effe01d8a1272afc9326d"
     };
